manual script other than dependency plugin

--- a/tmux.conf
+++ b/tmux.conf
@@ -56,9 +56,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'hendrikmi/tmux-cpu-mem-monitor'
+# set -g @plugin 'hendrikmi/tmux-cpu-mem-monitor'
 set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'tmux-plugins/tmux-net-speed'
+# set -g @plugin 'tmux-plugins/tmux-net-speed'
 
 
 # === RESURRECT SETTINGS ===
@@ -83,8 +83,9 @@ set -g status-style "bg=${bg}"
 # #{battery -p}
 set -g status-interval 5
 set -g status-left "#[fg=${session_fg},bold,bg=${bg}] #S #[fg=${bg},bg=${session_selection_bg}]#[fg=${session_selection_fg},bg=${session_selection_bg}] #(whoami)@#h #[fg=${session_selection_bg},bg=${bg}]#[fg=${session_fg},bg=${bg}] #(dir=$(basename \"#{pane_current_path}\"); branch=$(git -C \"#{pane_current_path}\" rev-parse --abbrev-ref HEAD 2>/dev/null || echo ''); if [ -n \"$branch\" ]; then echo \" $dir  $branch\"; else echo \" $dir\"; fi)"
-set -g status-right "#{net_speed}  C:#{cpu} |  M:#(/home/arif/bin/mem.sh) | 󱛟 D:#{disk} %d%b %I:%M%p B:#{battery -p} #{battery_icon_status} " 
+# set -g status-right "#{net_speed}  C:#{cpu} |  M:#(/home/arif/bin/mem.sh) | 󱛟 D:#{disk} %d%b %I:%M%p B:#{battery -p} #{battery_icon_status} " 
 
+set -g status-right "M:#(/home/arif/bin/mem.sh) | %d%b %I:%M%p | #(/home/arif/bin/battery.sh)" 
 #[fg=,bg=${session_fg}]#[fg=${session_selection_fg},bg=${session_fg}] #(perc=$(cat /sys/class/power_supply/BAT0/capacity 2>/dev/null || echo 'N/A'); stat=$(cat /sys/class/power_supply/BAT0/status 2>/dev/null | tr -d '[:space:]' || echo 'Unknown'); icon=\"🔻\"; [ \"$stat\" = \"Charging\" ] && icon=\"⚡\"; [ \"$stat\" = \"Full\" ] && icon=\"🔋\"; if [ \"$perc\" = \"N/A\" ]; then echo \"N/A\"; else if [ $perc -le 20 ]; then color=\"red\"; elif [ $perc -le 50 ]; then color=\"yellow\"; else color=\"green\"; fi; bars=$(($perc / 10)); bar=\"\"; for i in $(seq 1 10); do if [ $i -le $bars ]; then bar=\"${bar}#[fg=$color]█\"; else bar=\"${bar}#[fg=grey]░\"; fi; done; echo \"#[fg=$color]${perc}% $icon ${bar}\"; fi)"
 # set -g status-right 'Colors: #{battery_color_bg}bg#[default] #{battery_color_fg}fg#[default] #{battery_color_charge_bg}charge_bg#[default] #{battery_color_charge_fg}charge_fg#[default] #{battery_color_status_bg}status_bg#[default] #{battery_color_status_fg}status_fg#[default] | Graph: #{battery_graph} | Icon: #{battery_icon} | Charge Icon: #{battery_icon_charge} | Status Icon: #{battery_icon_status} | Percent: #{battery_percentage} | Remain: #{battery_remain}'
 set -g status-right-length '150'
