folder not showing handle

--- a/tmux.conf
+++ b/tmux.conf
@@ -82,7 +82,17 @@ set -g status-style "bg=${bg}"
 # Net: #(curl -s http://ipinfo.io/ip) | 
 # #{battery -p}
 set -g status-interval 5
-set -g status-left "#[fg=${session_fg},bold,bg=${bg}] #S #[fg=${bg},bg=${session_selection_bg}]#[fg=${session_selection_fg},bg=${session_selection_bg}] #(whoami)@#h #[fg=${session_selection_bg},bg=${bg}]#[fg=${session_fg},bg=${bg}] #(dir=$(basename \"#{pane_current_path}\"); branch=$(git -C \"#{pane_current_path}\" rev-parse --abbrev-ref HEAD 2>/dev/null || echo ''); if [ -n \"$branch\" ]; then echo \" $dir  $branch\"; else echo \" $dir\"; fi)"
+# set -g status-left "#[fg=${session_fg},bold,bg=${bg}] #S #[fg=${bg},bg=${session_selection_bg}]#[fg=${session_selection_fg},bg=${session_selection_bg}] #(whoami)@#h #[fg=${session_selection_bg},bg=${bg}]#[fg=${session_fg},bg=${bg}] #(dir=$(basename \"#{pane_current_path}\"); branch=$(git -C \"#{pane_current_path}\" rev-parse --abbrev-ref HEAD 2>/dev/null || echo ''); if [ -n \"$branch\" ]; then echo \" $dir  $branch\"; else echo \" $dir\"; fi)"
+set -g status-left "#[fg=${session_fg},bold,bg=${bg}] #S #[fg=${bg},bg=${session_selection_bg}]#[fg=${session_selection_fg},bg=${session_selection_bg}] #(whoami)@#h #[fg=${session_selection_bg},bg=${bg}]#[fg=${session_fg},bg=${bg}] #( 
+  path=\"#{pane_current_path}\"; 
+  dir=\$(basename \"\$path\"); 
+  branch=\$(git -C \"\$path\" rev-parse --abbrev-ref HEAD 2>/dev/null || echo ''); 
+  if [ -n \"\$branch\" ]; then 
+    echo \" \$dir  \$branch\"; 
+  else 
+    echo \" \$dir\"; 
+  fi
+)"
 # set -g status-right "#{net_speed}  C:#{cpu} |  M:#(/home/arif/bin/mem.sh) | 󱛟 D:#{disk} %d%b %I:%M%p B:#{battery -p} #{battery_icon_status} " 
 
 set -g status-right "M:#(/home/arif/bin/mem.sh) | %d%b %I:%M%p | #(/home/arif/bin/battery.sh)" 
